--- a/packages/gatsby-plugin-wordpress-parser/package.json
+++ b/packages/gatsby-plugin-wordpress-parser/package.json
@@ -25,6 +25,7 @@
     "gatsby-source-filesystem": "^2.1.38",
     "gatsby-transformer-sharp": "^2.3.5",
     "html-react-parser": "^0.10.0",
+    "normalize-path": "^3.0.0",
     "urijs": "^1.19.2"
   },
   "peerDependencies": {
