--- a/packages/gatsby-theme-wp-ginger/package.json
+++ b/packages/gatsby-theme-wp-ginger/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
-    "@fancyapps/fancybox": "^3.5.7",
     "@mdx-js/react": "^1.5.1",
     "@theme-ui/presets": "^0.2.44",
     "@theme-ui/typography": "^0.2.46",
@@ -29,10 +28,10 @@
     "gatsby-plugin-typography": "^2.3.17",
     "gatsby-theme-algolia": "*",
     "gatsby-theme-blog-data": "*",
+    "gatsby-plugin-wordpress-fancybox": "*",
     "grommet": "^2.8.1",
     "grommet-icons": "^4.4.0",
     "intersection-observer": "^0.7.0",
-    "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "react-headroom": "^3.0.0",
