--- a/packages/gatsby-theme-wp-blog-starter/package.json
+++ b/packages/gatsby-theme-wp-blog-starter/package.json
@@ -23,6 +23,7 @@
     "emotion-theming": "^10.0.19",
     "gatsby-background-image": "^0.9.7",
     "gatsby-image": "^2.2.33",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-postcss": "^2.1.15",
     "gatsby-plugin-react-helmet": "^3.1.15",
     "gatsby-plugin-sass": "^2.1.23",
