--- a/packages/gatsby-theme-wp-blog-starter/package.json
+++ b/packages/gatsby-theme-wp-blog-starter/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-postcss": "^2.1.15",
     "gatsby-plugin-react-helmet": "^3.1.15",
     "gatsby-plugin-sass": "^2.1.23",
+    "gatsby-plugin-scroll-reveal": "^0.0.4",
     "gatsby-plugin-styled-components": "^3.1.13",
     "gatsby-plugin-theme-ui": "^0.2.43",
     "gatsby-theme-algolia": "*",
