--- a/packages/gatsby-theme-wp-blog-starter/package.json
+++ b/packages/gatsby-theme-wp-blog-starter/package.json
@@ -24,12 +24,14 @@
     "gatsby-background-image": "^0.9.7",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-mailchimp": "^5.1.2",
     "gatsby-plugin-postcss": "^2.1.15",
     "gatsby-plugin-react-helmet": "^3.1.15",
     "gatsby-plugin-sass": "^2.1.23",
     "gatsby-plugin-scroll-reveal": "^0.0.4",
     "gatsby-plugin-styled-components": "^3.1.13",
     "gatsby-plugin-theme-ui": "^0.2.43",
+    "gatsby-plugin-wordpress-fancybox": "*",
     "gatsby-theme-algolia": "*",
     "gatsby-theme-blog-data": "*",
     "gatsby-theme-style-guide": "^0.2.49",
@@ -48,7 +50,6 @@
     "theme-ui": "^0.2.49",
     "typeface-ibm-plex-mono": "^0.0.61",
     "typeface-roboto-slab": "^0.0.72",
-    "typography": "^0.16.19",
-    "gatsby-plugin-wordpress-fancybox": "*"
+    "typography": "^0.16.19"
   }
 }
