--- a/examples/starter-data/package.json
+++ b/examples/starter-data/package.json
@@ -23,17 +23,20 @@
     "autoprefixer": "^9.7.2",
     "emotion": "^10.0.23",
     "emotion-theming": "^10.0.19",
-    "gatsby": "^2.18.5",
+    "gatsby": "^2.18.25",
     "gatsby-background-image": "^0.9.7",
     "gatsby-image": "^2.2.33",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-mailchimp": "^5.1.2",
     "gatsby-plugin-postcss": "^2.1.15",
     "gatsby-plugin-react-helmet": "^3.1.15",
     "gatsby-plugin-sass": "^2.1.23",
+    "gatsby-plugin-scroll-reveal": "^0.0.4",
     "gatsby-plugin-styled-components": "^3.1.13",
     "gatsby-plugin-theme-ui": "^0.2.43",
+    "gatsby-plugin-wordpress-fancybox": "*",
     "gatsby-theme-algolia": "*",
     "gatsby-theme-blog-data": "*",
-    "gatsby-plugin-wpcf7": "*",
     "gatsby-theme-style-guide": "^0.2.49",
     "grommet": "^2.8.1",
     "grommet-icons": "^4.4.0",
@@ -44,6 +47,7 @@
     "react-hook-form": "^3.28.4",
     "react-icons": "^3.8.0",
     "react-share": "^3.0.1",
+    "remove-trailing-slash": "^0.1.0",
     "sass": "^1.23.7",
     "styled-components": "^4.4.1",
     "styled-icons": "^9.0.1",
