--- a/packages/gatsby-theme-wp-ginger/package.json
+++ b/packages/gatsby-theme-wp-ginger/package.json
@@ -36,7 +36,7 @@
     "node-sass": "^4.13.0",
     "react-headroom": "^3.0.0",
     "react-helmet": "^5.2.1",
-    "react-hook-form": "^3.28.4",
+    "react-hook-form": "@3.28.4",
     "react-icons": "^3.8.0",
     "react-intersection-observer": "^8.25.1",
     "react-share": "^3.0.1",
