--- a/packages/gatsby-plugin-wpcf7/package.json
+++ b/packages/gatsby-plugin-wpcf7/package.json
@@ -21,11 +21,11 @@
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
     "@mdx-js/react": "^1.5.5",
-    "theme-ui": "^0.3.1",
     "@theme-ui/presets": "^0.3.0",
     "emotion": "^10.0.27",
     "html-react-parser": "^0.10.0",
-    "react-hook-form": "@3.28.4"
+    "react-hook-form": "^4.7.1",
+    "theme-ui": "^0.3.1"
   },
   "peerDependencies": {
     "gatsby": "^2.19.5",
