--- a/packages/gatsby-theme-wp-ginger/package.json
+++ b/packages/gatsby-theme-wp-ginger/package.json
@@ -24,9 +24,9 @@
     "gatsby-plugin-smoothscroll": "^1.0.4",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-typography": "^2.3.21",
+    "gatsby-plugin-wordpress-fancybox": "*",
     "gatsby-theme-algolia": "*",
     "gatsby-theme-blog-data": "*",
-    "gatsby-plugin-wordpress-fancybox": "*",
     "grommet": "^2.10.0",
     "grommet-icons": "^4.4.0",
     "intersection-observer": "^0.7.0",
@@ -34,7 +34,7 @@
     "node-sass": "^4.13.1",
     "react-headroom": "^3.0.0",
     "react-helmet": "^5.2.1",
-    "react-hook-form": "@3.28.4",
+    "react-hook-form": "^4.7.1",
     "react-icons": "^3.8.0",
     "react-intersection-observer": "^8.25.2",
     "react-share": "^4.0.1",
