--- a/examples/starter-data/package.json
+++ b/examples/starter-data/package.json
@@ -44,7 +44,7 @@
     "polished": "^3.4.3",
     "react-headroom": "^3.0.0",
     "react-helmet": "^5.2.1",
-    "react-hook-form": "@3.28.4",
+    "react-hook-form": "^4.7.1",
     "react-icons": "^3.8.0",
     "react-share": "^4.0.1",
     "remove-trailing-slash": "^0.1.0",
