--- a/packages/gatsby-theme-wp-blog-starter/package.json
+++ b/packages/gatsby-theme-wp-blog-starter/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^4.7.1",
     "react-icons": "^3.8.0",
     "react-share": "^4.0.1",
+    "react-spinners": "^0.8.0",
     "remove-trailing-slash": "^0.1.0",
     "sass": "^1.25.0",
     "styled-components": "^5.0.0",
