add dynamic comments to ginger

--- a/packages/gatsby-theme-wp-ginger/package.json
+++ b/packages/gatsby-theme-wp-ginger/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-wordpress-fancybox": "*",
     "gatsby-theme-algolia": "*",
     "gatsby-theme-blog-data": "*",
+    "graphql-tag": "^2.10.3",
     "grommet": "^2.10.0",
     "grommet-icons": "^4.4.0",
     "intersection-observer": "^0.7.0",
