--- a/examples/ginger-1/package.json
+++ b/examples/ginger-1/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "ginger-1",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "scripts": {
     "dev": "rm -rf .cache && gatsby develop",
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "gatsby": "^2.19.10",
-    "gatsby-theme-wp-ginger": "*",
-    "gatsby-plugin-wpcf7": "*",
+    "gatsby-plugin-wpcf7": "^0.0.2",
+    "gatsby-theme-wp-ginger": "^1.0.1",
     "lodash.merge": "^4.6.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
