--- a/examples/starter-data-raw/package.json
+++ b/examples/starter-data-raw/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter-data-raw",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -32,9 +32,9 @@
     "gatsby-plugin-scroll-reveal": "^0.0.5",
     "gatsby-plugin-styled-components": "^3.1.18",
     "gatsby-plugin-theme-ui": "^0.3.0",
-    "gatsby-plugin-wordpress-fancybox": "*",
-    "gatsby-theme-algolia": "*",
-    "gatsby-theme-blog-data": "*",
+    "gatsby-plugin-wordpress-fancybox": "^0.0.2",
+    "gatsby-theme-algolia": "^1.0.1",
+    "gatsby-theme-blog-data": "^1.0.1",
     "grommet": "^2.10.0",
     "grommet-icons": "^4.4.0",
     "moment": "^2.24.0",
