--- a/packages/gatsby-theme-blog-data/package.json
+++ b/packages/gatsby-theme-blog-data/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-theme-blog-data",
   "description": "WordPress core source theme for Gastby using WPGraphQL",
   "author": "Alexandra Spalato <alexaspalato@gmail.com>",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "license": "MIT",
   "peerDependencies": {
@@ -20,10 +20,10 @@
     "gatsby-plugin-google-tagmanager": "^2.1.24",
     "gatsby-plugin-sharp": "^2.4.0",
     "gatsby-plugin-sitemap": "^2.2.26",
+    "gatsby-plugin-wordpress-parser": "^0.0.2",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-source-graphql": "^2.1.32",
     "gatsby-transformer-sharp": "^2.3.13",
-    "gatsby-plugin-wordpress-parser": "*",
     "isomorphic-fetch": "^2.2.1",
     "normalize-path": "^3.0.0",
     "react-apollo": "^3.1.3",
