--- a/packages/gatsby-theme-wp-ginger/package.json
+++ b/packages/gatsby-theme-wp-ginger/package.json
@@ -18,6 +18,7 @@
     "emotion": "^10.0.27",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-mailchimp": "^5.1.2",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.27",
     "gatsby-plugin-scroll-reveal": "^0.0.5",
