--- a/packages/gatsby-theme-wp-blog-starter/package.json
+++ b/packages/gatsby-theme-wp-blog-starter/package.json
@@ -36,6 +36,8 @@
     "grommet-icons": "^4.4.0",
     "moment": "^2.24.0",
     "polished": "^3.4.3",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-headroom": "^3.0.0",
     "react-helmet": "^5.2.1",
     "react-hook-form": "^4.7.1",
@@ -44,6 +46,7 @@
     "react-spinners": "^0.8.0",
     "remove-trailing-slash": "^0.1.0",
     "sass": "^1.25.0",
+    "striptags": "^3.1.1",
     "styled-components": "^5.0.0",
     "styled-icons": "^9.2.0",
     "theme-ui": "^0.3.1",
