--- a/packages/gatsby-theme-blog-data/package.json
+++ b/packages/gatsby-theme-blog-data/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-theme-blog-data",
   "description": "WordPress core source theme for Gastby using WPGraphQL",
   "author": "Alexandra Spalato <alexaspalato@gmail.com>",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "main": "index.js",
   "license": "MIT",
   "peerDependencies": {
@@ -40,5 +40,6 @@
     "env": {},
     "componentsDefaultDirectory": "components/{name}",
     "packageManager": "npm"
-  }
+  },
+  "gitHead": "826c09aae55ebf0a30a30845b369278fa340ff18"
 }
