--- a/packages/gatsby-theme-wp-blog-starter/package.json
+++ b/packages/gatsby-theme-wp-blog-starter/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-theme-wp-blog-starter",
   "description": "WordPress basic theme for Gastby using WPGraphQL",
   "author": "Alexandra Spalato <alexaspalato@gmail.com>",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "main": "index.js",
   "license": "MIT",
   "peerDependencies": {
@@ -29,7 +29,7 @@
     "gatsby-plugin-styled-components": "^3.1.18",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-wordpress-fancybox": "^1.0.0",
-    "gatsby-theme-algolia": "^1.0.2",
+    "gatsby-theme-algolia": "^1.0.3",
     "gatsby-theme-blog-data": "^1.0.3",
     "gatsby-theme-style-guide": "^0.3.1",
     "grommet": "^2.10.0",
@@ -53,5 +53,6 @@
     "typeface-ibm-plex-mono": "^0.0.61",
     "typeface-roboto-slab": "^1.1.3",
     "typography": "^0.16.19"
-  }
+  },
+  "gitHead": "d42a5cd02c69ab2122febe852ef55b3ea677dfae"
 }
