--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,2 @@
-registry=https://npm.cloudsmith.io/gatsbywpthemes/test/
-npm.cloudsmith.io/gatsbywpthemes/test/
-:_authToken=7bb1e76aa0cf1cfacc39fad7140cacb89916f11d
+registry=https://npm.cloudsmith.io/gatsbywpthemes/gatsby-themes/
+npm.cloudsmith.io/gatsbywpthemes/gatsby-themes/:_authToken=7bb1e76aa0cf1cfacc39fad7140cacb89916f11d
