--- a/packages/gatsby-plugin-wordpress-parser/package.json
+++ b/packages/gatsby-plugin-wordpress-parser/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-plugin-wordpress-parser",
   "description": "A Gatsby plugin to turn remote inline assets into local static files, replace internal links by Gatsby links and facilitate parsing posts content.",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "author": "Paulina Hetman <info@pehaa.com>",
   "keywords": [
@@ -35,5 +35,6 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  "gitHead": "ce9744550c7d78616236c28813f547f1f6b46836"
 }
