--- a/packages/gatsby-plugin-wpcf7/package.json
+++ b/packages/gatsby-plugin-wpcf7/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-plugin-wpcf7",
   "description": "A Gatsby plugin that parser contact forms built with Contact Form 7.",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "author": "Paulina Hetman <info@pehaa.com>",
   "keywords": [
@@ -34,5 +34,6 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  "gitHead": "ce9744550c7d78616236c28813f547f1f6b46836"
 }
