--- a/packages/gatsby-theme-algolia/package.json
+++ b/packages/gatsby-theme-algolia/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-theme-algolia",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "gatsby theme for algolia search with instant search",
   "main": "index.js",
   "author": "Alexandra Spalato <alexaspalato@gmail.com>",
@@ -24,5 +24,6 @@
     "gatsby-plugin",
     "algolia",
     "search"
-  ]
+  ],
+  "gitHead": "ce9744550c7d78616236c28813f547f1f6b46836"
 }
