--- a/packages/gatsby-theme-wp-ginger/package.json
+++ b/packages/gatsby-theme-wp-ginger/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-theme-wp-ginger",
   "description": "WordPress basic theme for Gastby using WPGraphQL",
   "author": "Paulina Hetman <info@pehaa.com>",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "main": "index.js",
   "license": "MIT",
   "peerDependencies": {
@@ -25,9 +25,9 @@
     "gatsby-plugin-smoothscroll": "^1.0.4",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-typography": "^2.3.21",
-    "gatsby-plugin-wordpress-fancybox": "^1.0.1",
-    "gatsby-theme-algolia": "^1.0.6",
-    "gatsby-theme-blog-data": "^1.0.7",
+    "gatsby-plugin-wordpress-fancybox": "^1.0.2",
+    "gatsby-theme-algolia": "^1.0.7",
+    "gatsby-theme-blog-data": "^1.0.8",
     "graphql-tag": "^2.10.3",
     "grommet": "^2.10.0",
     "grommet-icons": "^4.4.0",
@@ -47,5 +47,6 @@
     "typeface-abril-fatface": "^0.0.72",
     "typeface-fira-sans": "^0.0.75",
     "typography": "^0.16.19"
-  }
+  },
+  "gitHead": "ce9744550c7d78616236c28813f547f1f6b46836"
 }
