--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 registry=https://npm.cloudsmith.io/gatsbywpthemes/gatsby-themes/
-npm.cloudsmith.io/gatsbywpthemes/gatsby-themes/:_authToken=7bb1e76aa0cf1cfacc39fad7140cacb89916f11d
+//npm.cloudsmith.io/gatsbywpthemes/gatsby-themes/:_authToken=7bb1e76aa0cf1cfacc39fad7140cacb89916f11d
