--- a/packages/gatsby-theme-wp-ginger/package.json
+++ b/packages/gatsby-theme-wp-ginger/package.json
@@ -47,5 +47,8 @@
     "typeface-fira-sans": "^0.0.75",
     "typography": "^0.16.19"
   },
-  "gitHead": "40b579e6c7c310fff0a8568136e33e1f8a1221c4"
+  "gitHead": "40b579e6c7c310fff0a8568136e33e1f8a1221c4",
+  "devDependencies": {
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.8"
+  }
 }
