--- a/packages/gatsby-theme-wp-ginger/package.json
+++ b/packages/gatsby-theme-wp-ginger/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gatsby-theme-wp-ginger",
-  "description": "WordPress basic theme for Gastby using WPGraphQL",
+  "description": "WordPress basic theme for Gatsby using WPGraphQL",
   "author": "Paulina Hetman <info@pehaa.com>",
   "version": "1.0.11",
   "main": "index.js",
-  "license": "MIT",
+  "license": "LicenseRef-LICENSE",
   "peerDependencies": {
     "gatsby": "^2.19.10",
     "react": "^16.13.0",
@@ -25,6 +25,8 @@
     "gatsby-plugin-smoothscroll": "^1.0.4",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-typography": "^2.3.21",
+    "gatsby-plugin-wpcf7": "^1.0.4",
+    "gatsby-plugin-wp-mapbox": "^1.0.4",
     "gatsby-plugin-wordpress-fancybox": "^1.0.4",
     "gatsby-theme-blog-data": "^1.0.11",
     "graphql-tag": "^2.10.3",
