--- a/packages/gatsby-theme-wp-ginger/package.json
+++ b/packages/gatsby-theme-wp-ginger/package.json
@@ -28,7 +28,7 @@
     "gatsby-plugin-wpcf7": "^1.0.4",
     "gatsby-plugin-wp-mapbox": "^1.0.4",
     "gatsby-plugin-wordpress-fancybox": "^1.0.4",
-    "gatsby-theme-blog-data": "^1.0.11",
+    "gatsby-theme-blog-data-v4": "^1.0.11",
     "graphql-tag": "^2.10.3",
     "grommet": "^2.10.0",
     "grommet-icons": "^4.4.0",
