--- a/packages/gatsby-theme-wp-ginger/package.json
+++ b/packages/gatsby-theme-wp-ginger/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-typography": "^2.3.21",
     "gatsby-plugin-wpcf7": "^1.0.4",
+    "gatsby-theme-algolia": "^1.0.4",
     "gatsby-plugin-wp-mapbox": "^1.0.4",
     "gatsby-plugin-wordpress-fancybox": "^1.0.4",
     "gatsby-theme-blog-data-v4": "^1.0.11",
