--- a/packages/gatsby-theme-wp-blog-starter/package.json
+++ b/packages/gatsby-theme-wp-blog-starter/package.json
@@ -16,6 +16,7 @@
     "@theme-ui/presets": "^0.3.0",
     "apollo-link-context": "^1.0.20",
     "autoprefixer": "^9.7.6",
+    "detect-browser": "^5.1.0",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
     "gatsby-background-image": "^1.1.1",
