--- a/packages/gatsby-theme-wp-ginger/package.json
+++ b/packages/gatsby-theme-wp-ginger/package.json
@@ -15,6 +15,7 @@
     "@theme-ui/presets": "^0.3.0",
     "@theme-ui/typography": "^0.3.0",
     "abril-fatface": "^1.0.1",
+    "babel-plugin-prismjs": "^2.0.1",
     "emotion": "^10.0.27",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -25,10 +26,10 @@
     "gatsby-plugin-smoothscroll": "^1.1.0",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-typography": "^2.5.1",
+    "gatsby-plugin-wordpress-fancybox": "^1.0.4",
+    "gatsby-plugin-wp-mapbox": "^1.0.4",
     "gatsby-plugin-wpcf7": "^1.0.4",
     "gatsby-theme-algolia": "^1.0.9",
-    "gatsby-plugin-wp-mapbox": "^1.0.4",
-    "gatsby-plugin-wordpress-fancybox": "^1.0.4",
     "gatsby-theme-blog-data": "^1.0.11",
     "graphql-tag": "^2.10.3",
     "grommet": "^2.13.0",
@@ -36,6 +37,7 @@
     "intersection-observer": "^0.10.0",
     "moment": "^2.25.3",
     "node-sass": "^4.14.1",
+    "prismjs": "^1.20.0",
     "react-headroom": "^3.0.0",
     "react-helmet": "^6.0.0",
     "react-hook-form": "^5.6.3",
