--- a/packages/gatsby-theme-wp-blog-starter/package.json
+++ b/packages/gatsby-theme-wp-blog-starter/package.json
@@ -16,6 +16,7 @@
     "@theme-ui/presets": "^0.3.0",
     "apollo-link-context": "^1.0.20",
     "autoprefixer": "^9.7.6",
+    "babel-plugin-prismjs": "^2.0.1",
     "detect-browser": "^5.1.0",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
@@ -37,6 +38,7 @@
     "grommet-icons": "^4.4.0",
     "moment": "^2.25.3",
     "polished": "^3.6.2",
+    "prismjs": "^1.20.0",
     "react": "^16.13.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.13.0",
