--- a/packages/gatsby-theme-blog-data/package.json
+++ b/packages/gatsby-theme-blog-data/package.json
@@ -6,25 +6,25 @@
   "main": "index.js",
   "license": "MIT",
   "peerDependencies": {
-    "gatsby": "^2.21.21",
+    "gatsby": "^2.22.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
-    "apollo-boost": "^0.4.8",
+    "apollo-boost": "^0.4.9",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
     "disqus-react": "^1.0.8",
-    "gatsby-awesome-pagination": "^0.3.5",
-    "gatsby-plugin-google-analytics": "^2.3.1",
-    "gatsby-plugin-google-tagmanager": "^2.3.1",
-    "gatsby-plugin-sharp": "^2.6.2",
-    "gatsby-plugin-sitemap": "^2.4.2",
+    "gatsby-awesome-pagination": "^0.3.6",
+    "gatsby-plugin-google-analytics": "^2.3.2",
+    "gatsby-plugin-google-tagmanager": "^2.3.3",
+    "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-plugin-sitemap": "^2.4.3",
     "gatsby-plugin-wordpress-parser": "^1.0.4",
-    "gatsby-source-filesystem": "^2.3.1",
-    "gatsby-source-wordpress-experimental": "^0.1.11",
-    "gatsby-transformer-sharp": "^2.5.2",
+    "gatsby-source-filesystem": "^2.3.8",
+    "gatsby-source-wordpress-experimental": "0.1.11",
+    "gatsby-transformer-sharp": "^2.5.3",
     "isomorphic-fetch": "^2.2.1",
     "normalize-path": "^3.0.0",
     "react-apollo": "^3.1.5",
