--- a/packages/gatsby-theme-wp-blog-starter/package.json
+++ b/packages/gatsby-theme-wp-blog-starter/package.json
@@ -20,6 +20,7 @@
     "detect-browser": "^5.1.0",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
+    "framer-motion": "^1.11.0",
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -56,6 +57,5 @@
     "typeface-ibm-plex-mono": "^0.0.61",
     "typeface-roboto-slab": "^1.1.4",
     "typography": "^0.16.19"
-  },
-  "gitHead": "40b579e6c7c310fff0a8568136e33e1f8a1221c4"
+  }
 }
