--- a/packages/gatsby-theme-wp-blog-starter/package.json
+++ b/packages/gatsby-theme-wp-blog-starter/package.json
@@ -17,6 +17,7 @@
     "apollo-link-context": "^1.0.20",
     "autoprefixer": "^9.8.0",
     "babel-plugin-prismjs": "^2.0.1",
+    "browser-monads": "^1.0.0",
     "detect-browser": "^5.1.0",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
