--- a/packages/gatsby-theme-blog-data/package.json
+++ b/packages/gatsby-theme-blog-data/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
-    "@babel/core": "^7.10.2",
-    "@babel/plugin-proposal-optional-chaining": "^7.10.1",
+    "@babel/core": "^7.10.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.3",
     "@bumped-inc/gatsby-plugin-optional-chaining": "^1.0.0",
+    "add": "^2.0.6",
     "apollo-boost": "^0.4.9",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
@@ -31,7 +32,8 @@
     "isomorphic-fetch": "^2.2.1",
     "normalize-path": "^3.0.0",
     "react-apollo": "^3.1.5",
-    "remove-trailing-slash": "^0.1.0"
+    "remove-trailing-slash": "^0.1.0",
+    "yarn": "^1.22.4"
   },
   "keywords": [
     "gatsby",
