--- a/packages/gatsby-theme-blog-data/package.json
+++ b/packages/gatsby-theme-blog-data/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1"
   },
   "dependencies": {
+    "@apollo/client": "^3.1.3",
     "@apollo/react-hooks": "^4.0.0",
     "@babel/core": "^7.11.4",
     "add": "^2.0.6",
