--- a/examples/ginger-1/package.json
+++ b/examples/ginger-1/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "gatsby": "^2.24.48",
-    "gatsby-plugin-wpcf7": "^1.0.4",
-    "gatsby-theme-wp-ginger": "^1.0.11",
+    "gatsby-plugin-wpcf7": "*",
+    "gatsby-theme-wp-ginger": "*",
     "lodash.merge": "^4.6.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
