--- a/examples/ginger-3/package.json
+++ b/examples/ginger-3/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^2.24.2",
-    "gatsby-theme-blog-data": "^1.0.11",
+    "gatsby-theme-blog-data": "*",
     "lodash.merge": "^4.6.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
