--- a/examples/ginger/package.json
+++ b/examples/ginger/package.json
@@ -19,7 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "gatsby": "^2.24.48",
-    "gatsby-theme-wp-ginger": "^1.0.11",
+    "gatsby-theme-wp-ginger": "*",
     "lodash.merge": "^4.6.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
