--- a/examples/starter-data-raw/package.json
+++ b/examples/starter-data-raw/package.json
@@ -32,8 +32,8 @@
     "gatsby-plugin-scroll-reveal": "^0.0.5",
     "gatsby-plugin-styled-components": "^3.1.18",
     "gatsby-plugin-theme-ui": "^0.3.0",
-    "gatsby-plugin-wordpress-fancybox": "^1.0.4",
-    "gatsby-theme-blog-data": "^1.0.11",
+    "gatsby-plugin-wordpress-fancybox": "*",
+    "gatsby-theme-blog-data": "*",
     "grommet": "^2.10.0",
     "grommet-icons": "^4.4.0",
     "moment": "^2.24.0",
