--- a/packages/gatsby-theme-blog-data/package.json
+++ b/packages/gatsby-theme-blog-data/package.json
@@ -21,7 +21,7 @@
     "gatsby-plugin-google-tagmanager": "^2.3.11",
     "gatsby-plugin-sharp": "^2.6.28",
     "gatsby-plugin-sitemap": "^2.4.12",
-    "gatsby-plugin-wordpress-parser": "^1.0.4",
+    "gatsby-plugin-wordpress-parser": "*",
     "gatsby-source-filesystem": "^2.3.25",
     "gatsby-source-wordpress-experimental": "1.3.6",
     "gatsby-transformer-sharp": "^2.5.13",
