--- a/packages/gatsby-theme-wp-blog-starter/package.json
+++ b/packages/gatsby-theme-wp-blog-starter/package.json
@@ -30,8 +30,8 @@
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-theme-ui": "^0.3.0",
-    "gatsby-plugin-wordpress-fancybox": "^1.0.4",
-    "gatsby-theme-blog-data": "^1.0.11",
+    "gatsby-plugin-wordpress-fancybox": "*",
+    "gatsby-theme-blog-data": "*",
     "gatsby-theme-style-guide": "^0.3.1",
     "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
