--- a/packages/gatsby-theme-wp-ginger/package.json
+++ b/packages/gatsby-theme-wp-ginger/package.json
@@ -26,9 +26,9 @@
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-typography": "^2.5.10",
-    "gatsby-plugin-wordpress-fancybox": "^1.0.4",
-    "gatsby-plugin-wpcf7": "^1.0.4",
-    "gatsby-theme-blog-data": "^1.0.11",
+    "gatsby-plugin-wordpress-fancybox": "*",
+    "gatsby-plugin-wpcf7": "*",
+    "gatsby-theme-blog-data": "*",
     "graphql-tag": "^2.11.0",
     "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
