--- a/examples/starter/.babelrc
+++ b/examples/starter/.babelrc
@@ -4,7 +4,7 @@
     [
       "prismjs",
       {
-        "languages": ["javascript", "css", "markup"],
+        "languages": ["javascript", "css", "markup", "php"],
         "plugins": ["show-language"],
         "theme": "twilight",
         "css": true
