--- a/packages/gatsby-plugin-wp-seo/package.json
+++ b/packages/gatsby-plugin-wp-seo/package.json
@@ -14,6 +14,7 @@
   "author": "Paulina Hetman <info@pehaa.com>",
   "license": "0BSD",
   "dependencies": {
+    "normalize-path": "^3.0.0",
     "react-helmet": "^6.1.0",
     "remove-trailing-slash": "^0.1.1"
   }
