--- a/packages/gatsby-theme-wp-blog-starter/package.json
+++ b/packages/gatsby-theme-wp-blog-starter/package.json
@@ -31,6 +31,7 @@
     "gatsby-plugin-styled-components": "^3.3.11",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-wordpress-fancybox": "*",
+    "gatsby-plugin-wp-seo": "*",
     "gatsby-theme-blog-data": "*",
     "gatsby-theme-style-guide": "^0.3.1",
     "grommet": "^2.15.0",
