--- a/examples/starter-data-nostyles/package.json
+++ b/examples/starter-data-nostyles/package.json
@@ -40,6 +40,7 @@
     "grommet": "^2.15.0",
     "grommet-icons": "^4.4.0",
     "moment": "^2.28.0",
+    "normalize.css": "^8.0.1",
     "polished": "^3.6.6",
     "prismjs": "^1.21.0",
     "react": "^16.13.0",
