--- a/examples/starter-tailwind/package.json
+++ b/examples/starter-tailwind/package.json
@@ -13,6 +13,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
+    "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
     "@theme-ui/color": "^0.3.1",
     "@theme-ui/presets": "^0.3.0",
@@ -25,9 +26,11 @@
     "gatsby": "^2.24.67",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.19",
+    "gatsby-plugin-emotion": "^4.3.13",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-postcss": "^2.3.12",
+    "gatsby-plugin-postcss": "^3.0.3",
+    "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-sass": "^2.3.13",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
@@ -42,6 +45,8 @@
     "moment": "^2.28.0",
     "normalize.css": "^8.0.1",
     "polished": "^3.6.6",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
     "prismjs": "^1.21.0",
     "react": "^16.13.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -57,7 +62,10 @@
     "striptags": "^3.1.1",
     "styled-components": "^5.2.0",
     "styled-icons": "^10.21.0",
+    "stylelint": "^13.7.2",
+    "tailwindcss": "^1.9.2",
     "theme-ui": "^0.3.1",
+    "twin.macro": "^1.10.0",
     "typeface-ibm-plex-mono": "^0.0.61",
     "typeface-roboto-slab": "^1.1.4",
     "typography": "^0.16.19"
