--- a/packages/gatsby-plugin-wordpress-lightbox/package.json
+++ b/packages/gatsby-plugin-wordpress-lightbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-plugin-wordpress-lightbox",
-  "description": "A Gatsby plugin that adds Fancybox to galleries.",
+  "description": "A Gatsby plugin that adds Lightbox to galleries.",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Paulina Hetman <info@pehaa.com>",
