--- a/examples/starter-2/package.json
+++ b/examples/starter-2/package.json
@@ -13,12 +13,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
+    "babel-preset-gatsby": "^0.5.14",
     "gatsby": "^2.24.85",
     "gatsby-plugin-wpcf7": "*",
     "gatsby-theme-wp-blog-starter": "*",
     "lodash.merge": "^4.6.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "prettier": "^2.1.2"
