--- a/packages/gatsby-theme-wp-blog-starter/package.json
+++ b/packages/gatsby-theme-wp-blog-starter/package.json
@@ -16,6 +16,7 @@
     "@theme-ui/presets": "^0.3.0",
     "autoprefixer": "^10.0.1",
     "babel-plugin-prismjs": "^2.0.1",
+    "babel-preset-gatsby": "^0.5.14",
     "detect-browser": "^5.2.0",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
