--- a/examples/starter-data-nostyles/package.json
+++ b/examples/starter-data-nostyles/package.json
@@ -34,9 +34,9 @@
     "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-wordpress-fancybox": "*",
+    "gatsby-plugin-wpcf7": "*",
     "gatsby-plugin-wp-seo": "*",
     "gatsby-theme-blog-data": "*",
-    "gatsby-theme-style-guide": "^0.3.1",
     "grommet": "^2.15.2",
     "grommet-icons": "^4.5.0",
     "moment": "^2.29.1",
