--- a/examples/starter-chakra/package.json
+++ b/examples/starter-chakra/package.json
@@ -27,7 +27,7 @@
     "gatsby": "^2.24.85",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.21",
-    "gatsby-plugin-chakra-ui": "^0.1.4",
+    "gatsby-plugin-chakra-ui": "^1.0.0-rc.8",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-postcss": "^3.0.3",
