--- a/examples/starter-chakra/package.json
+++ b/examples/starter-chakra/package.json
@@ -32,6 +32,7 @@
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-postcss": "^3.0.3",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sass": "^2.3.21",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-styled-components": "^3.3.14",
