--- a/examples/starter-new/package.json
+++ b/examples/starter-new/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "gatsby": "^2.24.85",
+    "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-wpcf7": "*",
     "gatsby-theme-wp-starter-chakra": "*",
     "lodash.merge": "^4.6.2",
