--- a/packages/gatsby-theme-wp-starter/package.json
+++ b/packages/gatsby-theme-wp-starter/package.json
@@ -11,8 +11,9 @@
     "react-dom": "^16.12.0"
   },
   "dependencies": {
-    "@chakra-ui/core": "^1.0.0-rc.8",
-    "@chakra-ui/icons": "^1.0.0-rc.8",
+    "@chakra-ui/react": "^1.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
     "babel-plugin-prismjs": "^2.0.1",
     "detect-browser": "^5.2.0",
     "framer-motion": "^2.9.4",
