--- a/packages/gatsby-theme-wp-starter/package.json
+++ b/packages/gatsby-theme-wp-starter/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.12.0"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.0",
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
