--- a/packages/gatsby-theme-wp-starter/package.json
+++ b/packages/gatsby-theme-wp-starter/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.12.0"
   },
   "dependencies": {
+    "@chakra-ui/gatsby-plugin": "^1.0.0",
     "@chakra-ui/icons": "^1.0.0",
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
@@ -21,7 +22,6 @@
     "gatsby": "^2.24.85",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.21",
-    "gatsby-plugin-chakra-ui": "^1.0.0-rc.8",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-postcss": "^3.0.3",
