custom build in progress

--- a/packages/gatsby-theme-blog-data/package.json
+++ b/packages/gatsby-theme-blog-data/package.json
@@ -23,7 +23,7 @@
     "gatsby-plugin-sitemap": "^2.4.17",
     "gatsby-plugin-wordpress-parser": "*",
     "gatsby-source-filesystem": "^2.3.35",
-    "gatsby-source-wordpress-experimental": "1.7.9",
+    "gatsby-source-wordpress-experimental": "^2.3.1",
     "gatsby-transformer-sharp": "^2.5.19",
     "isomorphic-fetch": "^3.0.0",
     "normalize-path": "^3.0.0",
