--- a/examples/starter-new/.env-sample
+++ b/examples/starter-new/.env-sample
@@ -3,3 +3,5 @@
 # notice: variables prexifed with GATSBY_ will be made available to client-side code
 # GATSBY_DISQUS_NAME=your_disqus_name_comes_here
 # GATSBY_MAILCHIMP_ENDPOINT=https://gmail.us20.list-manage.com/subscribe/post?u={your_value}&amp;id={your_id}
+# GATSBY_WP_URL="your wp url"
+# GATSBY_AUTH_TOKEN="your auth token"
