--- a/packages/gatsby-theme-wp-starter/package.json
+++ b/packages/gatsby-theme-wp-starter/package.json
@@ -50,5 +50,8 @@
     "typeface-ibm-plex-mono": "^1.1.13",
     "typeface-roboto-slab": "^1.1.13",
     "typography": "^0.16.19"
+  },
+  "devDependencies": {
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.18"
   }
 }
