--- a/examples/starter-gradient/package.json
+++ b/examples/starter-gradient/package.json
@@ -14,12 +14,10 @@
     "analyze": "rm -rf .cache && ANALYZE_BUNDLE_SIZE=true gatsby build"
   },
   "dependencies": {
-    "gatsby": "^2.28.2",
+    "gatsby": "^2.29.0",
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-theme-wp-starter": "*",
-    "lodash.merge": "^4.6.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "lodash.merge": "^4.6.2"
   },
   "devDependencies": {
     "prettier": "^2.2.1"
