--- a/examples/starter-gradient/package.json
+++ b/examples/starter-gradient/package.json
@@ -17,9 +17,7 @@
     "gatsby": "^2.28.2",
     "gatsby-plugin-root-import": "^2.0.5",
     "@gatsbywpthemes/gatsby-theme-wp-starter": "*",
-    "lodash.merge": "^4.6.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "lodash.merge": "^4.6.2"
   },
   "devDependencies": {
     "prettier": "^2.2.1"
