--- a/packages/gatsby-theme-wp-starter/package.json
+++ b/packages/gatsby-theme-wp-starter/package.json
@@ -21,6 +21,7 @@
     "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
     "@gatsbywpthemes/gatsby-theme-blog-data": "*",
     "babel-plugin-prismjs": "^2.0.1",
+    "color": "^3.1.3",
     "detect-browser": "^5.2.0",
     "framer-motion": "^3.1.1",
     "gatsby-background-image": "^1.3.1",
