--- a/packages/gatsby-theme-wp-ginger-chakra/package.json
+++ b/packages/gatsby-theme-wp-ginger-chakra/package.json
@@ -21,6 +21,7 @@
     "@gatsbywpthemes/gatsby-theme-blog-data": "*",
     "abril-fatface": "^1.0.1",
     "babel-plugin-prismjs": "^2.0.1",
+    "date-fns": "^2.16.1",
     "framer-motion": "^3.1.1",
     "gatsby-image": "^2.8.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -33,7 +34,6 @@
     "gatsby-plugin-typography": "^2.9.0",
     "graphql-tag": "^2.11.0",
     "intersection-observer": "^0.12.0",
-    "moment": "^2.29.1",
     "prismjs": "^1.22.0",
     "react-headroom": "^3.1.0",
     "react-helmet": "^6.1.0",
