--- a/packages/gatsby-theme-tailwindcss/package.json
+++ b/packages/gatsby-theme-tailwindcss/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.1.0",
     "gatsby-plugin-postcss": "^3.4.0",
     "postcss": "^8.2.1",
     "tailwindcss": "^2.0.2",
