--- a/packages/gatsby-theme-wp-ginger-chakra/package.json
+++ b/packages/gatsby-theme-wp-ginger-chakra/package.json
@@ -34,6 +34,7 @@
     "gatsby-plugin-typography": "^2.9.0",
     "graphql-tag": "^2.11.0",
     "intersection-observer": "^0.12.0",
+    "lodash.uniqby": "^4.7.0",
     "prismjs": "^1.22.0",
     "react-headroom": "^3.1.0",
     "react-helmet": "^6.1.0",
