--- a/examples/starter-data-nostyles/package.json
+++ b/examples/starter-data-nostyles/package.json
@@ -24,7 +24,7 @@
     "framer-motion": "^2.9.4",
     "gatsby": "^2.24.85",
     "gatsby-background-image": "^1.1.2",
-    "gatsby-image": "^2.4.21",
+    "gatsby-plugin-image": "^0.5.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-postcss": "^3.0.3",
