--- a/packages/gatsby-theme-wp-bootstrap5/package.json
+++ b/packages/gatsby-theme-wp-bootstrap5/package.json
@@ -23,8 +23,7 @@
     "babel-plugin-prismjs": "^2.0.1",
     "bootstrap": "^5.0.0-alpha3",
     "date-fns": "^2.16.1",
-    "gatsby-image": "^2.7.0",
-    "gatsby-plugin-image": "^0.5.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-react-helmet": "^3.6.0",
     "gatsby-plugin-root-import": "^2.0.5",
