add support for line-numbers

--- a/examples/bootstrap5/.babelrc
+++ b/examples/bootstrap5/.babelrc
@@ -5,7 +5,7 @@
       "prismjs",
       {
         "languages": ["javascript", "css", "markup", "php"],
-        "plugins": ["show-language"],
+        "plugins": ["show-language", "line-numbers"],
         "theme": "twilight",
         "css": true
       }
