--- a/packages/gatsby-plugin-wordpress-lightbox/package.json
+++ b/packages/gatsby-plugin-wordpress-lightbox/package.json
@@ -21,11 +21,11 @@
   },
   "license": "LicenseRef-LICENSE",
   "dependencies": {
-    "html-react-parser": "^1.0.0",
-    "simple-react-lightbox": "3.3.4-2"
+    "html-react-parser": "^1.2.3",
+    "simple-react-lightbox": "3.5.5"
   },
   "peerDependencies": {
-    "gatsby": "^2.29.1",
+    "gatsby": "^2.31.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
