--- a/packages/gatsby-theme-wp-bootstrap5/package.json
+++ b/packages/gatsby-theme-wp-bootstrap5/package.json
@@ -11,36 +11,13 @@
     "react-dom": "^17.0.1"
   },
   "dependencies": {
+    "@gatsbywpthemes/gatsby-plugin-gwpt-packages": "*",
     "@emotion/react": "^11.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
-    "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "*",
-    "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
-    "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
-    "@gatsbywpthemes/gatsby-theme-blog-data": "*",
-    "babel-plugin-prismjs": "^2.0.1",
-    "bootstrap": "^5.0.1",
-    "date-fns": "^2.21.3",
-    "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-react-helmet": "^4.5.0",
-    "gatsby-plugin-root-import": "^2.0.5",
-    "gatsby-plugin-sass": "^4.5.0",
-    "gatsby-plugin-scroll-reveal": "^0.0.7",
-    "gatsby-plugin-webfonts": "^2.0.0",
-    "graphql-tag": "^2.12.4",
-    "intersection-observer": "^0.12.0",
-    "lodash.uniqby": "^4.7.0",
-    "prismjs": "^1.22.0",
-    "react-headroom": "^3.1.0",
-    "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.6.2",
-    "react-icons": "^4.2.0",
-    "react-intersection-observer": "^8.32.0",
-    "react-share": "^4.4.0",
-    "sass": "^1.32.13",
-    "striptags": "^3.1.1"
+    "bootstrap": "^5.0.1"
   },
   "gitHead": "40b579e6c7c310fff0a8568136e33e1f8a1221c4",
   "devDependencies": {
