--- a/examples/starter-ginger-kitchen/package.json
+++ b/examples/starter-ginger-kitchen/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "starter-ginger-kitchen",
   "version": "1.0.0",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "scripts": {
     "dev": "rm -rf .cache && gatsby develop",
     "build": "gatsby build",
