--- a/packages/gatsby-plugin-gwpt-chakra/package.json
+++ b/packages/gatsby-plugin-gwpt-chakra/package.json
@@ -4,7 +4,7 @@
   "description": "common packages for all gatsbywpthemes",
   "main": "index.js",
   "author": "Gatsby WP Themes <contact@gatsbywpthemes.com>",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.3",
