--- a/packages/gatsby-plugin-gwpt-packages/package.json
+++ b/packages/gatsby-plugin-gwpt-packages/package.json
@@ -4,7 +4,7 @@
   "description": "common packages for all gatsbywpthemes",
   "main": "index.js",
   "author": "Gatsby WP Themes <contact@gatsbywpthemes.com>",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "*",
     "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
