--- a/packages/gatsby-plugin-wordpress-lightbox/package.json
+++ b/packages/gatsby-plugin-wordpress-lightbox/package.json
@@ -19,7 +19,7 @@
     "type": "git",
     "url": "https://github.com/pehaa/@gatsbywpthemes/gatsby-plugin-wordpress-lightbox.git"
   },
-  "license": "LicenseRef-LICENSE",
+  "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "html-react-parser": "^1.2.6",
     "simple-react-lightbox": "3.6.6"
