--- a/packages/gatsby-plugin-wpcf7/package.json
+++ b/packages/gatsby-plugin-wpcf7/package.json
@@ -16,7 +16,7 @@
     "type": "git",
     "url": "https://github.com/pehaa/@gatsbywpthemes/gatsby-plugin-wpcf7.git"
   },
-  "license": "LicenseRef-LICENSE",
+  "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "@mdx-js/react": "^1.6.22",
     "html-react-parser": "^1.2.6",
