--- a/examples/starter-base-gradient/package.json
+++ b/examples/starter-base-gradient/package.json
@@ -14,7 +14,7 @@
     "analyze": "rm -rf .cache && ANALYZE_BUNDLE_SIZE=true gatsby build"
   },
   "dependencies": {
-    "@gatsbywpthemes/gatsby-theme-wp-base": "*",
+    "@gatsbywpthemes/gatsby-theme-wp-base": "1.1.0",
     "autoprefixer": "^10.3.1",
     "gatsby": "^3.9.1",
     "gatsby-plugin-root-import": "^2.0.5",
