--- a/packages/gatsby-plugin-gwpt-chakra/package.json
+++ b/packages/gatsby-plugin-gwpt-chakra/package.json
@@ -16,5 +16,6 @@
     "gatsby": "^3.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "gitHead": "94c8dd5e197d45c9a3a060075237c00d549ffa5e"
 }
