--- a/packages/gatsby-plugin-gwpt-packages/package.json
+++ b/packages/gatsby-plugin-gwpt-packages/package.json
@@ -45,5 +45,6 @@
     "gatsby": "^3.13.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "gitHead": "94c8dd5e197d45c9a3a060075237c00d549ffa5e"
 }
