--- a/packages/gatsby-theme-wp-base/package.json
+++ b/packages/gatsby-theme-wp-base/package.json
@@ -16,5 +16,6 @@
   },
   "devDependencies": {
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.21"
-  }
+  },
+  "gitHead": "94c8dd5e197d45c9a3a060075237c00d549ffa5e"
 }
