--- a/examples/starter-base-tailwind/package.json
+++ b/examples/starter-base-tailwind/package.json
@@ -24,10 +24,10 @@
     "autoprefixer": "^10.3.7",
     "clsx": "^1.1.1",
     "gatsby": "^4.0.0",
-    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-emotion": "^7.0.0",
     "gatsby-plugin-postcss": "^5.0.0",
     "gatsby-plugin-sass": "^5.0.0",
+    "gatsby-plugin-use-dark-mode": "^1.4.0",
     "local-storage": "^2.0.0",
     "lodash.merge": "^4.6.2",
     "postcss": "^8.3.11",
