--- a/examples/starter-light/package.json
+++ b/examples/starter-light/package.json
@@ -26,18 +26,17 @@
     "gatsby": "^4.1.0",
     "gatsby-plugin-emotion": "^7.1.0",
     "gatsby-plugin-postcss": "^5.1.0",
-    "gatsby-plugin-sass": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.0",
     "gatsby-plugin-use-dark-mode": "^1.4.0",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-sharp": "^4.1.0",
     "lodash.merge": "^4.6.2",
     "postcss": "^8.3.11",
+    "postcss-import": "^14.0.2",
     "prismjs": "^1.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "sass": "1.43.4",
     "tailwindcss": "^2.2.19",
     "tailwindcss-debug-screens": "^2.2.0",
     "twin.macro": "^2.8.1",
