--- a/packages/gatsby-theme-blog-data/package.json
+++ b/packages/gatsby-theme-blog-data/package.json
@@ -21,7 +21,7 @@
     "gatsby-plugin-sharp": "^4.1.3",
     "gatsby-plugin-sitemap": "^5.1.0",
     "gatsby-source-filesystem": "^4.1.2",
-    "gatsby-source-wordpress": "^6.1.3",
+    "gatsby-source-wordpress": "@6.3.0-alpha-wordpress-image-hydration.5+633909e707",
     "gatsby-transformer-sharp": "^4.1.0",
     "isomorphic-fetch": "^3.0.0",
     "normalize-path": "^3.0.0",
