--- a/packages/gatsby-theme-blog-data/package.json
+++ b/packages/gatsby-theme-blog-data/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gatsbywpthemes/gatsby-theme-blog-data",
-  "description": "WordPress core source theme for Gastby using WPGraphQL",
+  "description": "WordPress core source theme for Gatsby using WPGraphQL",
   "author": "Alexandra Spalato <alexaspalato@gmail.com>",
   "version": "1.5.1",
   "main": "index.js",
