--- a/packages/gatsby-theme-wp-base/package.json
+++ b/packages/gatsby-theme-wp-base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gatsbywpthemes/gatsby-theme-wp-base",
-  "description": "WordPress basic theme for Gastby using WPGraphQL",
+  "description": "WordPress basic theme for Gatsby using WPGraphQL",
   "author": "Alexandra Spalato <alexaspalato@gmail.com>",
   "version": "1.3.1",
   "main": "index.js",
