--- a/examples/starter-naked/package.json
+++ b/examples/starter-naked/package.json
@@ -19,7 +19,9 @@
     "@gatsbywpthemes/gatsby-theme-wp-comments": "^1.0.1",
     "@headlessui/react": "^1.4.1",
     "@kunukn/react-collapse": "^2.2.9",
+    "@loadable/component": "^5.15.0",
     "gatsby": "^4.2.0",
+    "gatsby-plugin-loadable-components-ssr": "^4.1.0",
     "gatsby-plugin-use-dark-mode": "^1.4.0",
     "lodash.merge": "^4.6.2",
     "prismjs": "^1.25.0",
