install on starter-base

--- a/examples/starter-base-tailwind/package.json
+++ b/examples/starter-base-tailwind/package.json
@@ -17,6 +17,7 @@
     "@gatsbywpthemes/gatsby-plugin-gwpt-packages": "^2.0.0",
     "@gatsbywpthemes/gatsby-plugin-gwpt-tailwind": "^1.0.1",
     "@gatsbywpthemes/gatsby-theme-wp-comments": "^1.0.1",
+    "@gatsbywpthemes/gatsby-theme-acf-builder": "^1.0.0",
     "@headlessui/react": "^1.4.1",
     "@kunukn/react-collapse": "^2.2.9",
     "gatsby": "^4.2.0",
