--- a/examples/starter-naked/package.json
+++ b/examples/starter-naked/package.json
@@ -18,9 +18,12 @@
     "@gatsbywpthemes/gatsby-plugin-gwpt-tailwind": "^1.2.2",
     "@gatsbywpthemes/gatsby-theme-wp-comments": "^1.0.2",
     "@gatsbywpthemes/gatsby-theme-wp-search": "^1.0.1",
+    "@gatsbywpthemes/gatsby-theme-acf-builder": "^1.0.0",
     "@headlessui/react": "^1.4.1",
     "@kunukn/react-collapse": "^2.2.9",
+    "@loadable/component": "^5.15.2",
     "gatsby": "^4.3.0",
+    "gatsby-plugin-loadable-components-ssr": "^4.1.2",
     "gatsby-plugin-use-dark-mode": "^1.4.0",
     "lodash.merge": "^4.6.2",
     "prismjs": "^1.25.0",
