split light packages

--- a/.github/workflows/split.yaml
+++ b/.github/workflows/split.yaml
@@ -27,12 +27,16 @@ jobs:
             split_repository: "gatsby-plugin-gwpt-packages-light"
           - local_path: "gatsby-plugin-gwpt-tailwind"
             split_repository: "gatsby-plugin-gwpt-tailwind"
+          - local_path: "gatsby-plugin-gwpt-tailwind"
+            split_repository: "gatsby-plugin-gwpt-tailwind-light"
           - local_path: "gatsby-plugin-gwpt-utils"
             split_repository: "gatsby-plugin-gwpt-utils"
           - local_path: "gatsby-plugin-wordpress-parser"
             split_repository: "gatsby-plugin-wordpress-parser"
           - local_path: "gatsby-plugin-wp-seo"
             split_repository: "gatsby-plugin-wp-seo"
+          - local_path: "gatsby-plugin-wp-seo"
+            split_repository: "gatsby-plugin-wp-seo-light"
           - local_path: "gatsby-plugin-wpcf7"
             split_repository: "gatsby-plugin-wpcf7"
           - local_path: "gatsby-theme-wp-search"
